# HW6

./: README.md
code/: CMakeLists.txt  box.cpp  box.h  camera.cpp  camera.h  common.h  cone.cpp  cone.h  control.cpp  cylinder.cpp  cylinder.h  directionallight.cpp  directionallight.h  geometry.cc  geometry.h  group.cpp  group.h  image.cpp  image.h  light.cpp  light.h  macro.cpp  macro.h  macroinstance.cpp  macroinstance.h  main.cpp  main.h  material.cpp  material.h  parse.cpp  parse.h  perlin.cpp  perlin.h  pointlight.cpp  pointlight.h  rayfile.cpp  rayfile.h  rayfile_render.cpp  rayfileinstance.cpp  rayfileinstance.h  (+13 more)
test_files/: groups.ray  pointLight.ray  reflect.ray  refract.ray  sphere.ray  transmit.ray  triangle.ray  xfm.ray
test_files/bonus/: ambientEmissive.ray  bump.ray  shadow.ray  snowman.ray  spot.ray  test_box.ray  test_bump.ray  test_cone.ray  test_cylinder.ray  test_torus.ray  texture.ray
